Windows/Java 17 test fixes.